--- a/AcropolisMuseum/res/layout/activity_main.xml
+++ b/AcropolisMuseum/res/layout/activity_main.xml
@@ -1,13 +1,38 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.acropolismuseum.MainActivity" >
+    android:background="@drawable/questionscreen"
+    android:orientation="vertical" >
 
-    
+    <TextView
+        android:id="@+id/txtTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|top"
+        android:layout_margin="20dp"
+        android:textSize="30sp" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/btnQR"
+        android:layout_width="300dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:text="@string/scanQR"
+        android:textSize="20sp" >
+    </Button>
+
+    <Button
+        android:id="@+id/btnNFC"
+        android:layout_width="300dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:text="@string/scanNFC"
+        android:textSize="20sp" >
+    </Button>
+
+</LinearLayout>
