--- a/AcropolisMuseum/res/menu/main.xml
+++ b/AcropolisMuseum/res/menu/main.xml
@@ -7,5 +7,15 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+    <item android:id="@+id/quiz"
+        android:icon="@drawable/quiz"
+        android:title="quiz"
+        android:showAsAction="ifRoom" />
+    
+    <item android:id="@+id/info"
+        android:icon="@drawable/info"
+        android:title="info"
+        android:showAsAction="ifRoom" />
 
 </menu>
