--- a/AcropolisMuseum/res/layout/activity_nfc.xml
+++ b/AcropolisMuseum/res/layout/activity_nfc.xml
@@ -2,15 +2,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.acropolismuseum.NfcActivity" >
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:id="@+id/Nfctext"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:background="#ffbb33"
+        android:text="@string/Nfcmsg"/>
+    
+    <ImageView
+        android:id="@+id/write_tag"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_below="@+id/Nfctext"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/write_tag"
+        android:layout_marginTop="50dp" 
+        android:contentDescription="">
+         
+    </ImageView>
+    
+    <TextView
+        android:id="@+id/Nfctext2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/write_tag"
+        android:gravity="center"
+        android:background="#ededed"
+        android:text="@string/Nfcmsg2"
+        android:layout_marginTop="75dp" />
 
 </RelativeLayout>
