--- a/AcropolisMuseum/res/layout/question1.xml
+++ b/AcropolisMuseum/res/layout/question1.xml
@@ -27,6 +27,14 @@
         android:layout_height="65dp"
         android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="25dp" />
+    
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="300dp"
+        android:layout_height="65dp"
+        android:layout_below="@+id/button2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp" />
 
 </RelativeLayout>
